# Inventory

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
docs/: DECISIONS.md  DESIGN_DRAFT.md  DIRECTION.md  FILE_SAFETY_RULES.md  HANDOVER.md  INVENTORY_FORMAT.md  NVD_FORMAT.md  NVV_FORMAT.md  PROJECT_BRIEF.md  UI_DESIGN_RULES.md  WORK_LOG.md  WRITE_DOCUMENT_GRADE_EDITOR_PLAN.md
public/licenses/nvd-fonts/: THIRD_PARTY_FONTS.md
src/: App.tsx  appLayout.ts  libraryNodeTemplates.ts  main.tsx  shiki-modules.d.ts  shikiHighlighter.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: appTypes.ts
src/app/session/: index.ts  useInventoryDocumentActions.ts  useInventorySession.ts  useNvdDocumentSession.ts  useNvdStyleControls.ts  useNvvDocumentSession.ts
src/app/settings/: index.ts  useAppPersistence.ts  useAppSettings.ts
src/app/shell/: AppOverlays.tsx  AppShell.tsx  ContextMenus.tsx  LibraryStructure.tsx  MainWorkspace.tsx  MenuBar.tsx  index.ts
src/app/workspace/: appLayout.ts  imageAnalysisWorker.ts  index.ts  nvdPageObjectAssets.ts  (+7 more)
src/libraryCatalog/: customNode.ts  index.ts  node.ts  normalization.ts  tag.ts  tagInference.test.ts  tagInference.ts  types.ts
src/sceneReaders/: audioReader.tsx  markdownDocumentReader.tsx  pdfDocumentReader.tsx  previewIo.ts  rasterImageReader.tsx  threeModelReader.tsx  vectorImageReader.tsx
(+336 files in other folders)
