[package]
name = "inventory"
version = "0.1.0"
description = "A local-first creative asset manager."
authors = ["Inventory contributors"]
edition = "2021"

[lib]
name = "inventory_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.40.0", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
